unpackaged/main/default/objects/Activity/fields/Call_Handling__c.field-meta.xml
<CustomField>
    <fullName>Call_Handling__c</fullName>
    <label>Call Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>