unpackaged/main/default/objects/Activity/fields/Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Time__c</fullName>
    <formula>DATETIMEVALUE(&quot;2021-03-10&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>