unpackaged/main/default/objects/Activity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <formula>ResponseTap_Call__r.RTap__Campaign__c</formula>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>