unpackaged/main/default/objects/Activity/fields/CC_CHECK__c.field-meta.xml
<CustomField>
    <fullName>CC_CHECK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOR TASK</description>
    <label>CC CHECK</label>
    <type>Checkbox</type>
</CustomField>