unpackaged/main/default/objects/Activity/fields/CLI__c.field-meta.xml
<CustomField>
    <fullName>CLI__c</fullName>
    <description>Caller Line ID</description>
    <label>CLI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>