unpackaged/main/default/objects/Activity/fields/Connected_Time__c.field-meta.xml
<CustomField>
    <fullName>Connected_Time__c</fullName>
    <label>Connected Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>