unpackaged/main/default/objects/Activity/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Call__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Request</fullName>
                <label>Booking Opportunity</label>
            </value>
            <value>
                <fullName>Arrival Time Update</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Discuss On going or follow-on work</fullName>
            </value>
            <value>
                <fullName>Change details of a booking</fullName>
            </value>
            <value>
                <fullName>Cancel a booking</fullName>
            </value>
            <value>
                <fullName>Issue with work carried out</fullName>
            </value>
            <value>
                <fullName>Billing or payment query</fullName>
            </value>
            <value>
                <fullName>Resources / Fleet</fullName>
            </value>
            <value>
                <fullName>Engineer - Job / Shift related</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Work for Aspect</fullName>
            </value>
            <value>
                <fullName>Genral Public reporting aspect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Booking Request - Existing Client</fullName>
                <isActive>false</isActive>
                <label>Booking Request - Existing Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>