unpackaged/main/default/objects/Activity/fields/Disconnected_Time__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Time__c</fullName>
    <label>Disconnected Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>