unpackaged/main/default/objects/Activity/fields/Interaction_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Start_Time__c</fullName>
    <label>Interaction Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>