unpackaged/main/default/objects/Activity/fields/Interaction_Total_Acd_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Total_Acd_Time__c</fullName>
    <label>Interaction Total Acd Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>