unpackaged/main/default/objects/Activity/fields/Interaction_TotalI_vr_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_TotalI_vr_Time__c</fullName>
    <label>Interaction TotalI vr Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>