unpackaged/main/default/objects/Activity/fields/Job_Profit__c.field-meta.xml
<CustomField>
    <fullName>Job_Profit__c</fullName>
    <formula>Job__r.Job_Gross_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>