unpackaged/main/default/objects/Activity/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <formula>ResponseTap_Call__r.RTap__Medium__c</formula>
    <label>Medium</label>
    <type>Text</type>
</CustomField>