unpackaged/main/default/objects/Activity/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>ACT-{000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>