unpackaged/main/default/objects/Activity/fields/NET_Job_Profit__c.field-meta.xml
<CustomField>
    <fullName>NET_Job_Profit__c</fullName>
    <label>NET Job Profit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>