unpackaged/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Purpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead - Booked - Reactive</fullName>
            </value>
            <value>
                <fullName>Lead - Booked - Estimate</fullName>
            </value>
            <value>
                <fullName>Lead - Pending</fullName>
            </value>
            <value>
                <fullName>Not Booked - Cost</fullName>
            </value>
            <value>
                <fullName>Not Booked - Card Details</fullName>
            </value>
            <value>
                <fullName>Not Booked - Out of area</fullName>
            </value>
            <value>
                <fullName>Not Booked - Response time</fullName>
            </value>
            <value>
                <fullName>Not Booked - Service type</fullName>
            </value>
            <value>
                <fullName>Not Booked - Bad line</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Not Resolved</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>