unpackaged/main/default/objects/Activity/fields/Postcode_Only_if_booking_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Only_if_booking_Opportunity__c</fullName>
    <label>Postcode - Only if booking Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>BR1</fullName>
            </value>
            <value>
                <fullName>BR2</fullName>
            </value>
            <value>
                <fullName>BR3</fullName>
            </value>
            <value>
                <fullName>BR4</fullName>
            </value>
            <value>
                <fullName>BR5</fullName>
            </value>
            <value>
                <fullName>BR6</fullName>
            </value>
            <value>
                <fullName>BR7</fullName>
            </value>
            <value>
                <fullName>BR8</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CR0</fullName>
            </value>
            <value>
                <fullName>CR1</fullName>
            </value>
            <value>
                <fullName>CR2</fullName>
            </value>
            <value>
                <fullName>CR3</fullName>
            </value>
            <value>
                <fullName>CR4</fullName>
            </value>
            <value>
                <fullName>CR5</fullName>
            </value>
            <value>
                <fullName>CR6</fullName>
            </value>
            <value>
                <fullName>CR7</fullName>
            </value>
            <value>
                <fullName>CR8</fullName>
            </value>
            <value>
                <fullName>DA1</fullName>
            </value>
            <value>
                <fullName>DA10</fullName>
            </value>
            <value>
                <fullName>DA11</fullName>
            </value>
            <value>
                <fullName>DA12</fullName>
            </value>
            <value>
                <fullName>DA13</fullName>
            </value>
            <value>
                <fullName>DA14</fullName>
            </value>
            <value>
                <fullName>DA15</fullName>
            </value>
            <value>
                <fullName>DA16</fullName>
            </value>
            <value>
                <fullName>DA17</fullName>
            </value>
            <value>
                <fullName>DA18</fullName>
            </value>
            <value>
                <fullName>DA2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>