unpackaged/main/default/objects/Activity/fields/ResponseTap_Call__c.field-meta.xml
<CustomField>
    <fullName>ResponseTap_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResponseTap Call</label>
    <referenceTo>RTap__ResponseTap_Call__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>