unpackaged/main/default/objects/Activity/fields/Review_Access__c.field-meta.xml
<CustomField>
    <fullName>Review_Access__c</fullName>
    <description>Did the agent ask if there would be access issues for the tradesperson? - 3 points for Yes</description>
    <inlineHelpText>Did the agent ask if there would be access issues for the tradesperson? - 3 points for Yes</inlineHelpText>
    <label>Review - Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>