unpackaged/main/default/objects/Activity/fields/Review_Answer__c.field-meta.xml
<CustomField>
    <fullName>Review_Answer__c</fullName>
    <description>Was the call answered in a clear, positive, unhurried way? (description) - 2 points for Yes</description>
    <inlineHelpText>Was the call answered in a clear, positive, unhurried way? (description) - 2 points for Yes</inlineHelpText>
    <label>Review - Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>