unpackaged/main/default/objects/Activity/fields/Review_Anything_else_we_can_help_with__c.field-meta.xml
<CustomField>
    <fullName>Review_Anything_else_we_can_help_with__c</fullName>
    <description>Did the agent ask if there was anything else they could assist with? - 2 points for Yes</description>
    <inlineHelpText>Did the agent ask if there was anything else they could assist with? - 2 points for Yes</inlineHelpText>
    <label>Review - Anything else we can help with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>