unpackaged/main/default/objects/Activity/fields/Review_Arrival_timeslots__c.field-meta.xml
<CustomField>
    <fullName>Review_Arrival_timeslots__c</fullName>
    <description>Did the agent clearly explain arrival timeslots &amp; avoid unrealistic promises? - 3 points for Yes</description>
    <inlineHelpText>Did the agent clearly explain arrival timeslots &amp; avoid unrealistic promises? - 3 points for Yes</inlineHelpText>
    <label>Review - Arrival timeslots</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>