unpackaged/main/default/objects/Activity/fields/Review_Ask_before_hold__c.field-meta.xml
<CustomField>
    <fullName>Review_Ask_before_hold__c</fullName>
    <description>Did the agent ask the customer before placing them on hold? - 3 points for Yes</description>
    <inlineHelpText>Did the agent ask the customer before placing them on hold? - 3 points for Yes</inlineHelpText>
    <label>Review - Ask before hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>