unpackaged/main/default/objects/Activity/fields/Review_Avoidance_Rates__c.field-meta.xml
<CustomField>
    <fullName>Review_Avoidance_Rates__c</fullName>
    <description>Did the agent either avoid offering, or discuss a rate discount appropriately? - 3 points for Yes</description>
    <inlineHelpText>Did the agent either avoid offering, or discuss a rate discount appropriately? - 3 points for Yes</inlineHelpText>
    <label>Review - Avoidance, Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>