unpackaged/main/default/objects/Activity/fields/Review_Booking_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Review_Booking_confirmation__c</fullName>
    <description>Did the agent tell the customer to expect to receive a booking confirmation by email? - 3 points for Yes</description>
    <inlineHelpText>Did the agent tell the customer to expect to receive a booking confirmation by email? - 3 points for Yes</inlineHelpText>
    <label>Review - Booking confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>