unpackaged/main/default/objects/Activity/fields/Review_Check_for_questions__c.field-meta.xml
<CustomField>
    <fullName>Review_Check_for_questions__c</fullName>
    <description>Did the agent ask if the customer had any questions? - 3 points for Yes</description>
    <inlineHelpText>Did the agent ask if the customer had any questions? - 3 points for Yes</inlineHelpText>
    <label>Review - Check for questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>