unpackaged/main/default/objects/Activity/fields/Review_Clear_No_Jargon__c.field-meta.xml
<CustomField>
    <fullName>Review_Clear_No_Jargon__c</fullName>
    <description>Did the agent sound clear throughout and avoid using jargon? - 3 points for Yes</description>
    <inlineHelpText>Did the agent sound clear throughout and avoid using jargon? - 3 points for Yes</inlineHelpText>
    <label>Review - Clear, No Jargon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>