unpackaged/main/default/objects/Activity/fields/Review_Confidence_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Review_Confidence_Helpful__c</fullName>
    <description>Did the agent sound confident an helpful throughout the duration of the call? - 4 points for Yes</description>
    <inlineHelpText>Did the agent sound confident an helpful throughout the duration of the call? - 4 points for Yes</inlineHelpText>
    <label>Review - Confidence / Helpful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>