unpackaged/main/default/objects/Activity/fields/Review_Confirm_Bill_payer__c.field-meta.xml
<CustomField>
    <fullName>Review_Confirm_Bill_payer__c</fullName>
    <description>Did the agent establish the customer was the bill payer? - 3 points for Yes</description>
    <inlineHelpText>Did the agent establish the customer was the bill payer? - 3 points for Yes</inlineHelpText>
    <label>Review - Confirm Bill payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>