unpackaged/main/default/objects/Activity/fields/Review_Confirm_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Review_Confirm_Contact_No__c</fullName>
    <description>Did the agent confirm the caller&#39;s number and ask if another contact number was needed? - 3 points for Yes</description>
    <inlineHelpText>Did the agent confirm the caller&#39;s number and ask if another contact number was needed? - 3 points for Yes</inlineHelpText>
    <label>Review - Confirm Contact No.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>