unpackaged/main/default/objects/Activity/fields/Review_Confirm_on_site_contact__c.field-meta.xml
<CustomField>
    <fullName>Review_Confirm_on_site_contact__c</fullName>
    <description>Did the agent discuss who the on-site contact would be? - 3 points for Yes</description>
    <inlineHelpText>Did the agent discuss who the on-site contact would be? - 3 points for Yes</inlineHelpText>
    <label>Review - Confirm on site contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>