unpackaged/main/default/objects/Activity/fields/Review_Confirm_payment_details__c.field-meta.xml
<CustomField>
    <fullName>Review_Confirm_payment_details__c</fullName>
    <description>Did the agent check existing payment details, or discuss new payment details? - 4 points for Yes</description>
    <inlineHelpText>Did the agent check existing payment details, or discuss new payment details? - 4 points for Yes</inlineHelpText>
    <label>Review - Confirm payment details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>