unpackaged/main/default/objects/Activity/fields/Review_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Review_Greeting__c</fullName>
    <description>Was the correct greeting used, including the agent&#39;s name? - 2 points for Yes</description>
    <inlineHelpText>Was the correct greeting used, including the agent&#39;s name? - 2 points for Yes</inlineHelpText>
    <label>Review - Greeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>