unpackaged/main/default/objects/Activity/fields/Review_Listening__c.field-meta.xml
<CustomField>
    <fullName>Review_Listening__c</fullName>
    <description>Did the agent listen the the customer&#39;s explanation without interrupting? - 3 points for Yes</description>
    <inlineHelpText>Did the agent listen the the customer&#39;s explanation without interrupting? - 3 points for Yes</inlineHelpText>
    <label>Review - Listening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>