unpackaged/main/default/objects/Activity/fields/Review_Materials__c.field-meta.xml
<CustomField>
    <fullName>Review_Materials__c</fullName>
    <description>Did the agent mention parts and materials could be charged in addition? - 3 points for Yes</description>
    <inlineHelpText>Did the agent mention parts and materials could be charged in addition? - 3 points for Yes</inlineHelpText>
    <label>Review - Materials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>