unpackaged/main/default/objects/Activity/fields/Review_Next_steps__c.field-meta.xml
<CustomField>
    <fullName>Review_Next_steps__c</fullName>
    <description>Did the agent correctly inform the customer what would happen next? - 3 points for Yes</description>
    <inlineHelpText>Did the agent correctly inform the customer what would happen next? - 3 points for Yes</inlineHelpText>
    <label>Review - Next steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>