unpackaged/main/default/objects/Activity/fields/Review_Opt_in_emails__c.field-meta.xml
<CustomField>
    <fullName>Review_Opt_in_emails__c</fullName>
    <description>Did the agent ask the customer if they wanted to opt-in to receive marketing emails? - 3 points for Yes</description>
    <inlineHelpText>Did the agent ask the customer if they wanted to opt-in to receive marketing emails? - 3 points for Yes</inlineHelpText>
    <label>Review - Opt in emails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>