unpackaged/main/default/objects/Activity/fields/Review_Parking__c.field-meta.xml
<CustomField>
    <fullName>Review_Parking__c</fullName>
    <description>Did the agent discuss parking restrictions or space availability for this property? - 2 points for Yes</description>
    <inlineHelpText>Did the agent discuss parking restrictions or space availability for this property? - 2 points for Yes</inlineHelpText>
    <label>Review - Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>