unpackaged/main/default/objects/Activity/fields/Review_Payment_Policy__c.field-meta.xml
<CustomField>
    <fullName>Review_Payment_Policy__c</fullName>
    <description>Did the agent communicate our payment policy clearly? - 3 points for Yes</description>
    <inlineHelpText>Did the agent communicate our payment policy clearly? - 3 points for Yes</inlineHelpText>
    <label>Review - Payment Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>