unpackaged/main/default/objects/Activity/fields/Review_Phonetic_email_check__c.field-meta.xml
<CustomField>
    <fullName>Review_Phonetic_email_check__c</fullName>
    <description>Did the agent read the customer&#39;s email address back to them to check accuracy? - 3 points for Yes</description>
    <inlineHelpText>Did the agent read the customer&#39;s email address back to them to check accuracy? - 3 points for Yes</inlineHelpText>
    <label>Review - Phonetic email check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>