unpackaged/main/default/objects/Activity/fields/Review_Polite_Language__c.field-meta.xml
<CustomField>
    <fullName>Review_Polite_Language__c</fullName>
    <description>Did the agent use polite language throughout the call? - 3 points for Yes</description>
    <inlineHelpText>Did the agent use polite language throughout the call? - 3 points for Yes</inlineHelpText>
    <label>Review - Polite Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>