unpackaged/main/default/objects/Activity/fields/Review_Recording__c.field-meta.xml
<CustomField>
    <fullName>Review_Recording__c</fullName>
    <description>Did the agent inform the customer that all calls are recorded? - 2 points for Yes</description>
    <inlineHelpText>Did the agent inform the customer that all calls are recorded? - 2 points for Yes</inlineHelpText>
    <label>Review - Recording</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>